support java 8 and improve structure