@@ -5,6 +5,7 @@ import org.bukkit.Material;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -22,22 +23,27 @@ public class PumpkinPVPConfig {
         // Create plugin folder first if it does not exist yet
         File pluginFolder = PumpkinPVPReloaded.getInstance().getDataFolder();
         if (!pluginFolder.exists() && !pluginFolder.mkdir())
-            PumpkinPVPReloaded.getLog().error("Failed to create plugin folder.");
+            PumpkinPVPReloaded.getPrefixedLogger().error("Failed to create plugin folder.");
         // Load config.yml with ConfigMaster
         this.configFile = ConfigFile.loadConfig(new File(pluginFolder, "config.yml"));
-        this.structure();
+
+        this.setStructure();
+
         this.explosive_pumpkins = this.getList("pumpkin-explosion.pumpkin-types",
-                List.of("PUMPKIN", "CARVED_PUMPKIN", "JACK_O_LANTERN"),
-                "These materials will explode on the configured trigger."
-        ).stream().map(configuredMaterial -> {
-            try {
-                return Material.valueOf(configuredMaterial);
-            } catch (IllegalArgumentException e) {
-                PumpkinPVPReloaded.getLog().warn("Material '"+configuredMaterial+
-                        "' cant be used as an explosive pumpkin because its not a valid material.");
-                return null;
-            }
-        }).filter(Objects::nonNull).collect(Collectors.toCollection(HashSet::new));
+                Arrays.asList("PUMPKIN", "CARVED_PUMPKIN", "JACK_O_LANTERN"),
+                "These materials will explode on the configured trigger.")
+                .stream()
+                .map(configuredMaterial -> {
+                    try {
+                        return Material.valueOf(configuredMaterial);
+                    } catch (IllegalArgumentException e) {
+                        PumpkinPVPReloaded.getPrefixedLogger().warn("Material '" + configuredMaterial + "' " +
+                               "cant be used as an explosive pumpkin because its not a valid material.");
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toCollection(HashSet::new));
         this.explosion_power = getFloat("pumpkin-explosion.power", 8.0F,
                 "TNT has a power of 4.0");
         this.explosion_effect_radius_squared = Math.pow(Math.max(explosion_power, 3), 2);
@@ -47,7 +53,7 @@ public class PumpkinPVPConfig {
                 "Enable destruction of nearby blocks.");
     }
 
-    private void structure() {
+    private void setStructure() {
         configFile.addDefault("pumpkin-deaths.attempt-to-correct-death-details", true);
         configFile.addDefault("pumpkin-explosion", null);
         configFile.addDefault("mechanics.explosion-triggers.left-click-pumpkin", true);
