@@ -34,9 +34,9 @@ public class DeathSoundEffects implements PumpkinPVPModule, Listener {
         shouldEnable();
         PumpkinPVPConfig config = PumpkinPVPReloaded.getConfiguration();
         this.expl_effect_radius = config.explosion_effect_radius_squared;
-        config.master().addComment("pumpkin-deaths.death-sound.enable",
+        config.master().addComment(configPath() + ".enable",
                 "Players dying to a pumpkin explosion will make a spooky configurable sound.");
-        this.volume = config.getFloat("pumpkin-deaths.death-sound.volume", -1.0F,
+        this.volume = config.getFloat(configPath() + ".volume", -1.0F,
                 "-1 means natural default volume.");
         this.pumpkin_explosion = Caffeine.newBuilder().expireAfterWrite(Duration.ofSeconds(1)).build();
         final List<String> defaults = Stream.of(
@@ -47,35 +47,46 @@ public class DeathSoundEffects implements PumpkinPVPModule, Listener {
                 "ENTITY_WITCH_CELEBRATE",
                 "ENTITY_GOAT_SCREAMING_DEATH",
                 "ENTITY_WARDEN_DEATH",
-                "ENTITY_HORSE_DEATH"
-                ).filter(sound -> {
+                "ENTITY_HORSE_DEATH")
+                .sorted()
+                .filter(sound -> {
                     try {
                         Sound.valueOf(sound);
                         return true;
                     } catch (IllegalArgumentException e) {
                         return false;
                     }
-                }).sorted().toList();
-        this.death_sounds = config.getList("pumpkin-deaths.death-sound.sounds", defaults, """
-                Use multiple entries to randomly cycle through a list of sounds or just one.\s
-                Requires correct enums from https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html"""
-        ).stream().map(configuredSound -> {
-            try {
-                return Sound.valueOf(configuredSound);
-            } catch (IllegalArgumentException e) {
-                PumpkinPVPReloaded.getLog().warn("Sound '"+configuredSound+"' is not a valid Sound. " +
-                        "Please use correct enums from: https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html");
-                return null;
-            }
-        }).filter(Objects::nonNull).distinct().collect(Collectors.toList());
+                })
+                .collect(Collectors.toList());
+        this.death_sounds = config.getList(configPath() + ".sounds", defaults,
+                "Use multiple entries to randomly cycle through a list of sounds or just one. \n" +
+                "Requires correct enums from https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html")
+                .stream()
+                .distinct()
+                .map(configuredSound -> {
+                    try {
+                        return Sound.valueOf(configuredSound);
+                    } catch (IllegalArgumentException e) {
+                        warn("Sound '" + configuredSound + "' is not a valid Sound. " +
+                             "Please use correct enums from: https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html");
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
         if (this.death_sounds.isEmpty()) {
-            this.death_sounds.addAll(defaults.stream().map(Sound::valueOf).toList());
+            this.death_sounds.addAll(defaults.stream().map(Sound::valueOf).collect(Collectors.toList()));
         }
     }
 
     @Override
+    public String configPath() {
+        return "pumpkin-deaths.death-sound";
+    }
+
+    @Override
     public boolean shouldEnable() {
-        return PumpkinPVPReloaded.getConfiguration().getBoolean("pumpkin-deaths.death-sound.enable", true);
+        return PumpkinPVPReloaded.getConfiguration().getBoolean(configPath() + ".enable", true);
     }
 
     @Override
