@@ -24,10 +24,10 @@ public class ExplodeSoundEffects implements PumpkinPVPModule, Listener {
     public ExplodeSoundEffects() {
         shouldEnable();
         PumpkinPVPConfig config = PumpkinPVPReloaded.getConfiguration();
-        config.master().addComment("pumpkin-explosion.sound-effects.enable",
+        config.master().addComment(configPath() + ".enable",
                 "Exploding pumpkins will make a spooky configurable sound.");
-        this.volume = config.getFloat("pumpkin-explosion.sound-effects.volume", 1.0F);
-        this.pitch = config.getFloat("pumpkin-explosion.sound-effects.pitch", 1.0F);
+        this.volume = config.getFloat(configPath() + ".volume", 1.0F);
+        this.pitch = config.getFloat(configPath() + ".pitch", 1.0F);
         final List<String> defaults = Stream.of(
                 "PARTICLE_SOUL_ESCAPE",
                 "ENTITY_WITCH_CELEBRATE",
@@ -39,35 +39,46 @@ public class ExplodeSoundEffects implements PumpkinPVPModule, Listener {
                 "ENTITY_GOAT_SCREAMING_HURT",
                 "ENTITY_HOGLIN_HURT",
                 "ENTITY_CHICKEN_HURT",
-                "ENTITY_ZOMBIFIED_PIGLIN_HURT"
-        ).filter(sound -> {
-            try {
-                Sound.valueOf(sound);
-                return true;
-            } catch (IllegalArgumentException e) {
-                return false;
-            }
-        }).sorted().toList();
-        this.explode_sounds = config.getList("pumpkin-explosion.sound-effects.sounds", defaults, """
-                Use multiple entries to randomly cycle through a list of sounds or just one.\s
-                Requires correct enums from https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html"""
-        ).stream().map(configuredSound -> {
-            try {
-                return Sound.valueOf(configuredSound);
-            } catch (IllegalArgumentException e) {
-                PumpkinPVPReloaded.getLog().warn("Sound '"+configuredSound+"' is not a valid Sound. " +
-                        "Please use correct enums from: https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html");
-                return null;
-            }
-        }).filter(Objects::nonNull).distinct().collect(Collectors.toList());
+                "ENTITY_ZOMBIFIED_PIGLIN_HURT")
+                .sorted()
+                .filter(sound -> {
+                    try {
+                        Sound.valueOf(sound);
+                        return true;
+                    } catch (IllegalArgumentException e) {
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
+        this.explode_sounds = config.getList(configPath() + ".sounds", defaults,
+                "Use multiple entries to randomly cycle through a list of sounds or just one. \n" +
+                "Requires correct enums from https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html")
+                .stream()
+                .distinct()
+                .map(configuredSound -> {
+                    try {
+                        return Sound.valueOf(configuredSound);
+                    } catch (IllegalArgumentException e) {
+                        warn("Sound '" + configuredSound + "' is not a valid Sound. " +
+                             "Please use correct enums from: https://jd.papermc.io/paper/1.20/org/bukkit/Sound.html");
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
         if (this.explode_sounds.isEmpty()) {
-            this.explode_sounds.addAll(defaults.stream().map(Sound::valueOf).toList());
+            this.explode_sounds.addAll(defaults.stream().map(Sound::valueOf).collect(Collectors.toList()));
         }
     }
 
     @Override
+    public String configPath() {
+        return "pumpkin-explosion.sound-effects";
+    }
+
+    @Override
     public boolean shouldEnable() {
-        return PumpkinPVPReloaded.getConfiguration().getBoolean("pumpkin-explosion.sound-effects.enable", true)
+        return PumpkinPVPReloaded.getConfiguration().getBoolean(configPath() + ".enable", true)
                 && volume > 0;
     }
 
